Setup Environment Variables

--- a/content-web/angular.json
+++ b/content-web/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "content-web"
+    }
+  },
+  "defaultProject": "content-web",
+  "cli": {
+    "analytics": "a90f2d2a-28da-4299-b976-f2c12532783f"
+  }
 }
