--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -19,9 +19,9 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
  imageRepository: 'content-web'
- resourceGroupName: 'fabmedical-[DeploymentID]'
- containerRegistryName: 'acr[DeploymentID]'
- containerRegistry: 'acr[DeploymentID].azurecr.io'
+ resourceGroupName: 'fabmedical-332077'
+ containerRegistryName: 'acr332077'
+ containerRegistry: 'acr332077.azurecr.io'
  dockerfilePath: './content-web'
  tag: '${{ github.run_id  }}'
 
