--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -14,7 +14,7 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-api'
-  resourceGroupName: 'fabmedical-[DeploymentID]'
+  resourceGroupName: 'fabmedical-332077'
   containerRegistryName: 'acr[DeploymentID]'
   containerRegistry: 'acr[DeploymentID].azurecr.io'
   dockerfilePath: './content-api'
