--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -15,8 +15,8 @@ on:
 env:
   imageRepository: 'content-api'
   resourceGroupName: 'fabmedical-332077'
-  containerRegistryName: 'acr[DeploymentID]'
-  containerRegistry: 'acr[DeploymentID].azurecr.io'
+  containerRegistryName: 'acr332077'
+  containerRegistry: 'acr332077.azurecr.io'
   dockerfilePath: './content-api'
   tag: '${{ github.run_id  }}'
 
